--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
   <!-- Rating state start -->
   <main>
-    <img id="star" class="circle" src="images/icon-star.svg" />
+    <div class="circle">
+
+      <img id="star" src="images/icon-star.svg" />
+    </div>
     <h1>
       How did we do?
     </h1>
@@ -36,24 +39,24 @@
     </p>
 
     <section id="rating">
-      <div id="1" class="circle">1</div>
-      <div id="2" class="circle">2</div>
-      <div id="3" class="circle">3</div>
-      <div id="4" class="circle">4</div>
-      <div id="5" class="circle">5</div>
-      <button id="btn" type="submit">SUBMIT</button>
+      <p id="1" class="circle">1</p>
+      <p id="2" class="circle">2</p>
+      <p id="3" class="circle">3</p>
+      <p id="4" class="circle">4</p>
+      <p id="5" class="circle">5</p>
     </section>
+    <button id="btn" type="submit">SUBMIT</button>
   </main>
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
-  You selected <!-- Add rating here --> out of 5
+  <!-- You selected Add rating here out of 5 -->
 
-  Thank you!
+  <!-- Thank you!
 
   We appreciate you taking the time to give a rating. If you ever need more support,
-  don’t hesitate to get in touch!
+  don’t hesitate to get in touch! -->
 
   <!-- Thank you state end -->
 
