--- a/index.html
+++ b/index.html
@@ -12,39 +12,47 @@
 <body>
 
   <main>
-    <div class="circle">
+    <section id="rating-page">
 
-      <img id="star" src="images/icon-star.svg" />
-    </div>
-    <h1 id="title">
-      How did we do?
-    </h1>
+      <div class="circle">
 
-    <p>
-      Please let us know how we did with your support request. All feedback is appreciated
-      to help us improve our offering!
-    </p>
+        <img id="star" src="images/icon-star.svg" />
+      </div>
+      <h1 id="title">
+        How did we do?
+      </h1>
 
-    <section id="rating">
-      <button type="button" value=1 class="circle rate">1</button>
-      <button type="button" value=2 class="circle rate">2</button>
-      <button type="button" value=3 class="circle rate">3</button>
-      <button type="button" value=4 class="circle rate">4</button>
-      <button type="button" value=5 class="circle rate">5</button>
+      <p>
+        Please let us know how we did with your support request. All feedback is appreciated
+        to help us improve our offering!
+      </p>
+
+      <div id="rating">
+        <button type="button" value=1 class="circle rate">1</button>
+        <button type="button" value=2 class="circle rate">2</button>
+        <button type="button" value=3 class="circle rate">3</button>
+        <button type="button" value=4 class="circle rate">4</button>
+        <button type="button" value=5 class="circle rate">5</button>
+      </div>
+      <button id="btn" type="submit">SUBMIT</button>
     </section>
-    <button id="btn" type="submit">SUBMIT</button>
+
+    <section id="thank-you-page">
+      <img id="thank-you-img" src="images/illustration-thank-you.svg" />
+      <p id="submitted-rating-container">
+        You selected <span id="submitted-rating"></span> out of 5
+      </p>
+
+      <div>
+        <h1 id="thank-you-title">Thank you!</h1>
+        <p>
+          We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in
+          touch!
+        </p>
+      </div>
+    </section>
+
   </main>
-
-  <!-- Thank you state start -->
-
-  <!-- You selected Add rating here out of 5 -->
-
-  <!-- Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support,
-  don’t hesitate to get in touch! -->
-
-  <!-- Thank you state end -->
 
 
   <div class="attribution">
