--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script type="module" src="app.js"></script>
   <title>Frontend Mentor | Interactive rating component</title>
 </head>
 
@@ -13,14 +12,10 @@
 
   <main>
     <section id="rating-page">
-
       <div class="circle">
-
         <img id="star" src="images/icon-star.svg" />
       </div>
-      <h1 id="title">
-        How did we do?
-      </h1>
+      <h1 id="title">How did we do?</h1>
 
       <p>
         Please let us know how we did with your support request. All feedback is appreciated
@@ -28,13 +23,13 @@
       </p>
 
       <div id="rating">
-        <button type="button" value=1 class="circle rate">1</button>
-        <button type="button" value=2 class="circle rate">2</button>
-        <button type="button" value=3 class="circle rate">3</button>
-        <button type="button" value=4 class="circle rate">4</button>
-        <button type="button" value=5 class="circle rate">5</button>
+        <button class="circle rate">1</button>
+        <button class="circle rate">2</button>
+        <button class="circle rate">3</button>
+        <button class="circle rate">4</button>
+        <button class="circle rate">5</button>
       </div>
-      <button id="btn" type="submit">SUBMIT</button>
+      <button id="btn-submit" type="submit">SUBMIT</button>
     </section>
 
     <section id="thank-you-page">
@@ -59,6 +54,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script type="module" src="app.js"></script>
 </body>
 
 </html>
