--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Interactive rating component</title>
+  <script type="module" src="app.js"></script>
 </head>
 
 <body>
-
   <main>
     <section id="rating-page">
       <div class="circle">
         <img id="star" src="images/icon-star.svg" />
       </div>
-      <h1 id="title">How did we do?</h1>
 
-      <p>
-        Please let us know how we did with your support request. All feedback is appreciated
-        to help us improve our offering!
-      </p>
+      <div>
+        <h1 id="title">How did we do?</h1>
+        <p>
+          Please let us know how we did with your support request. All feedback is appreciated
+          to help us improve our offering!
+        </p>
+      </div>
 
       <div id="rating">
         <button class="circle rate">1</button>
@@ -46,16 +48,13 @@
         </p>
       </div>
     </section>
-
   </main>
-
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/hadreemustaffa">Hadree Mustaffa</a>.
   </div>
 
-  <script type="module" src="app.js"></script>
 </body>
 
 </html>
