change attribution tag and added alt attribute to images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main>
     <section id="rating-page">
       <div class="circle">
-        <img id="star" src="images/icon-star.svg" />
+        <img id="star" alt="image of a star" src="images/icon-star.svg" />
       </div>
 
       <div>
@@ -35,7 +35,7 @@
     </section>
 
     <section id="thank-you-page">
-      <img id="thank-you-img" src="images/illustration-thank-you.svg" />
+      <img id="thank-you-img" alt="illustration of thank you" src="images/illustration-thank-you.svg" />
       <p id="submitted-rating-container">
         You selected <span id="submitted-rating"></span> out of 5
       </p>
@@ -50,10 +50,10 @@
     </section>
   </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://www.frontendmentor.io/profile/hadreemustaffa">Hadree Mustaffa</a>.
-  </div>
+  </footer>
 
 </body>
 
