change buttons to input type radio

--- a/index.html
+++ b/index.html
@@ -4,57 +4,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Interactive Rating Component solution for frontendmentor.io">
   <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | Interactive rating component</title>
-  <script type="module" src="app.js"></script>
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <title>FEM | Interactive Rating</title>
+  <script defer src="index.js"></script>
 </head>
 
 <body>
   <main>
-    <section id="rating-page">
-      <div class="circle">
-        <img id="star" alt="image of a star" src="images/icon-star.svg" />
+    <div class="feedback">
+      <div class="feedback__circle flex row align-center justify-center">
+        <img src="./assets/images/icon-star.svg" alt="star icon" class="star">
       </div>
 
-      <div>
-        <h1 id="title">How did we do?</h1>
-        <p>
-          Please let us know how we did with your support request. All feedback is appreciated
-          to help us improve our offering!
-        </p>
+      <div class="feedback__text-container flex column g-1">
+        <h2>How did we do?</h2>
+        <p>Please let us know how we did with your support request. All feedback is appreciated
+          to help us improve our offering!</p>
       </div>
 
-      <div id="rating">
-        <button class="circle rate">1</button>
-        <button class="circle rate">2</button>
-        <button class="circle rate">3</button>
-        <button class="circle rate">4</button>
-        <button class="circle rate">5</button>
-      </div>
-      <button id="btn-submit" type="submit">SUBMIT</button>
-    </section>
+      <form action="" class="feedback__form flex column g-2" autocomplete="off">
+        <fieldset class="feedback__form-input flex row justify-between">
+          <legend class="sr-only">Select your rating:</legend>
+          <input type="radio" name="rating" id="rating1" value="1">
+          <input type="radio" name="rating" id="rating2" value="2">
+          <input type="radio" name="rating" id="rating3" value="3">
+          <input type="radio" name="rating" id="rating4" value="4">
+          <input type="radio" name="rating" id="rating5" value="5">
+        </fieldset>
+        <button class="feedback__form-submit" type="submit">SUBMIT</button>
+      </form>
+    </div>
 
-    <section id="thank-you-page">
-      <img id="thank-you-img" alt="illustration of thank you" src="images/illustration-thank-you.svg" />
-      <p id="submitted-rating-container">
-        You selected <span id="submitted-rating"></span> out of 5
+    <div class="thankyou" hidden>
+      <img alt="illustration of thank you" src="./assets/images/illustration-thank-you.svg" />
+      <p class="thankyou__rating">
+        You selected <span class="thankyou__rating-submitted"></span> out of 5
       </p>
 
-      <div>
-        <h1 id="thank-you-title">Thank you!</h1>
+      <div class="thankyou__text-container">
+        <h2>Thank you!</h2>
         <p>
           We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in
           touch!
         </p>
       </div>
-    </section>
+    </div>
   </main>
-
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://www.frontendmentor.io/profile/hadreemustaffa">Hadree Mustaffa</a>.
-  </footer>
-
 </body>
 
 </html>
