add input labels

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <form action="" class="feedback__form flex column g-2" autocomplete="off">
         <fieldset class="feedback__form-input flex row justify-between">
           <legend class="sr-only">Select your rating:</legend>
-          <input type="radio" name="rating" id="rating1" value="1">
-          <input type="radio" name="rating" id="rating2" value="2">
-          <input type="radio" name="rating" id="rating3" value="3">
-          <input type="radio" name="rating" id="rating4" value="4">
-          <input type="radio" name="rating" id="rating5" value="5">
+          <input type="radio" name="rating" id="rating1" aria-label="1" value="1">
+          <input type="radio" name="rating" id="rating2" aria-label="2" value="2">
+          <input type="radio" name="rating" id="rating3" aria-label="3" value="3">
+          <input type="radio" name="rating" id="rating4" aria-label="4" value="4">
+          <input type="radio" name="rating" id="rating5" aria-label="5" value="5">
         </fieldset>
         <button class="feedback__form-submit" type="submit">SUBMIT</button>
       </form>
